...
          tabBarIcon: ({ color, size }) => <BookText color={color} size={size} strokeWidth={2.2} />,
        }}
      />
      <Tabs.Screen
        name="dukan"
        options={{
          title: 'Dukan',
          tabBarIcon: ({ color, size }) => <Store color={color} size={size} strokeWidth={2.2} />,
        }}
      />
      <Tabs.Screen
        name="paisa"
        options={{
...
